--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import 'node_modules/animate.css/animate.css';
+@import '../node_modules/animate.css/animate.css';
 
 * {
   margin: 0;
@@ -167,16 +167,11 @@ header {
 /* Imagen con fondo rojo */
 .about-image {
   background-color: red;
-  width: 0;
+  width: 33%;
   overflow: hidden;
-  transition: width 1s ease;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.about-image.expand {
-  width: 33.33%;
 }
 
 /* Imagen circular */
@@ -201,21 +196,14 @@ header {
 .about-content {
   background-color: #111;
   color: #eee;
-  width: 0;
+  width: 67%;
   overflow: hidden;
-  transition: width 1s ease;
   padding: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.about-content.expand {
-  width: 66.66%;
-  padding: 40px;
-}
-
-/* Carrusel */
 .carousel {
   width: 80%;
   overflow: hidden;
@@ -246,11 +234,6 @@ header {
   color: #111;
 }
 
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
-
 /*PROJECT*/
 .projects-section {
   width: 100%;
@@ -273,22 +256,6 @@ header {
   height: 100%;
   position: relative;
   overflow: hidden;
-  opacity: 0;
-  transform: translateY(0);
-  transition: transform 5s ease, opacity 5s ease;
-}
-
-.slide-from-top {
-  transform: translateY(-100vh);
-}
-
-.slide-from-bottom {
-  transform: translateY(100vh);
-}
-
-.animate-in {
-  transform: translateY(0);
-  opacity: 1;
 }
 
 .project-card img {
