--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,20 @@
 }
 
 body {
-  font-family: 'Helvetica Neue', sans-serif;
-  background-color: #fff;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+  background-color: black;
   color: #111;
   margin: 0;
   height: 100%;
   overflow: hidden;
+}
+
+h1, h2, h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  color: white;
+  margin-bottom: 0.5rem;
 }
 
 html{
@@ -29,39 +37,66 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 20px 40px;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0));
+  background: #2b2d429c;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.6);
   color: #fff;
   z-index: 1000;
 }
 
-.left h1 {
-  font-size: 1.2rem;
-  letter-spacing: 1px;
+.left {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
+.left h1 {
+  font-size: 1.6rem;
+  letter-spacing: 1.2px;
+}
+
+.left .subtitle-header {
+  font-size: 0.8rem;
+  letter-spacing: 1.5px;
+  font-weight: 400;
+  color: #8d99ae;
+}
+
+.center {
+  flex: 1; 
+  text-align: center;
+}
 
 .center nav a {
   margin: 0 15px;
   text-decoration: none;
   color: #fff;
-  font-size: 0.9rem;
+  font-size: 1.1rem;
   text-transform: uppercase;
   transition: color 0.3s;
 }
 
 .center nav a:hover {
-  color: #aaa;
+  color: #D90429;
+}
+
+.right {
+  width: 25%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .right a {
-  margin-left: 15px;
-  color: #111;
-  font-size: 1rem;
+  margin-left: 20px;
+  color: white;
+  font-size: 1.4rem;
   transition: color 0.3s;
+  align-items: center;
 }
 
 .right a:hover {
-  color: #888;
+  color: #D90429;
 }
 
 .main-container {
@@ -138,15 +173,15 @@ header {
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background-color: rgba(255,255,255,0.5);
-  outline-color: black;
+  background-color: #2b2d429c;
+  outline-color: #2B2D42;
   transition: background-color 0.3s ease;
   cursor: pointer;
 }
 
 .slider-dots .dot.active {
-  background-color: white;
-  outline-color: black;
+  background-color: #D90429;
+  outline-color: #EDF2F4;
 }
 
 /*ABOUT ME */
@@ -202,6 +237,11 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.about-content h2 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
 }
 
 .carousel {
@@ -311,7 +351,7 @@ header {
 }
 
 .card-title {
-  font-size: 1rem;
+  font-size: 1.2rem;
   line-height: 1.4;
   transition: transform 0.4s ease;
 }
@@ -355,11 +395,11 @@ header {
   max-width: 600px;
   width: 90%;
   text-align: center;
-  color: #111;
+  color: #eee;
 }
 
 .section-title {
-  font-size: 3rem;
+  font-size: 3.2rem;
   margin-bottom: 0.5rem;
 }
 
