--- a/css/style.css
+++ b/css/style.css
@@ -120,101 +120,6 @@ header {
   display: flex;
 }
 
-.skills-icons {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1.2rem;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 1rem 0;
-}
-
-.skills-icons img {
-  width: 100px;
-  aspect-ratio: 1/1;
-  object-fit: contain;
-  filter: brightness(0) invert(1);
-  transform: scale(0.8);
-}
-
-.skills-icons img:hover {
-  transform: scale(1);
-  filter: brightness(1) invert(0);
-}
-
-.experience-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 20px;
-  margin-top: 40px;
-}
-
-/* Cada bloque del experience */
-.experience-item {
-  vertical-align: top;
-  display: inline-block;
-  width: 32%; /* 3 columnas con gap */
-  text-align: center;
-  padding: 10px;
-  box-sizing: border-box;
-}
-
-.experience-logo-container {
-  height: 140px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 15px;
-}
-
-.experience-logo {
-  max-height: 100%;
-  max-width: 100%;
-  object-fit: contain;
-  cursor: pointer;
-  filter: brightness(0) invert(1);
-  transform: scale(0.8);
-}
-
-.experience-logo:hover {
-  transform: scale(1);
-  filter: brightness(1) invert(0);
-}
-
-
-.experience-item-title {
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-.experience-item-time {
-  font-size: 1.2rem;
-  color: #ccc;
-  margin-bottom: 15px;
-}
-
-.experience-item-description {
-  text-align: center;
-  font-size: 1.1rem;
-  line-height: 1.5;
-  margin:10%;
-}
-
-.experience-subdescription {
-  font-size: 0.9rem;
-  text-align: center;
-  color: #ccc;
-}
-
-/* Responsive: una sola columna en pantallas pequeñas */
-@media (max-width: 900px) {
-  .experience-item {
-    width: 100%;
-  }
-}
-
 /* LATEST WORK */
 
 #latestwork {
@@ -399,6 +304,100 @@ header {
   stroke: #D90429; /* Color de hover */
 }
 
+.skills-icons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.2rem;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 1rem 0;
+}
+
+.skills-icons img {
+  width: 100px;
+  aspect-ratio: 1/1;
+  object-fit: contain;
+  filter: brightness(0) invert(1);
+  transform: scale(0.8);
+}
+
+.skills-icons img:hover {
+  transform: scale(1);
+  filter: brightness(1) invert(0);
+}
+
+.experience-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+  margin-top: 40px;
+}
+
+.experience-item {
+  vertical-align: top;
+  display: inline-block;
+  width: 32%; 
+  text-align: center;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.experience-logo-container {
+  height: 140px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.experience-logo {
+  max-height: 100%;
+  max-width: 100%;
+  object-fit: contain;
+  cursor: pointer;
+  filter: brightness(0) invert(1);
+  transform: scale(0.8);
+}
+
+.experience-logo:hover {
+  transform: scale(1);
+  filter: brightness(1) invert(0);
+}
+
+
+.experience-item-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.experience-item-time {
+  font-size: 1.2rem;
+  color: #ccc;
+  margin-bottom: 15px;
+}
+
+.experience-item-description {
+  text-align: center;
+  font-size: 1.1rem;
+  line-height: 1.5;
+  margin:10%;
+}
+
+.experience-subdescription {
+  font-size: 0.9rem;
+  text-align: center;
+  color: #ccc;
+}
+
+/* Responsive: una sola columna en pantallas pequeñas */
+@media (max-width: 900px) {
+  .experience-item {
+    width: 100%;
+  }
+}
+
 /*PROJECT*/
 .projects-section {
   width: 100%;
@@ -426,23 +425,19 @@ header {
 .project-card.disable-hover {
   pointer-events: none;
 }
-
+/*
 .project-card img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   display: block;
-}
+}*/
 
 .project-image {
   flex: 1;
   height: 100%;
   position: relative;
-}
-
-.project-image img {
   width: 100%;
-  height: 100%;
   object-fit: cover;
   display: block;
 }
@@ -463,7 +458,7 @@ header {
   position: absolute;
   width: 100%;
   justify-content: flex-end;
-  background-color: rgba(255,0,0,0.5);
+  background-color: #2b2d429c;
   bottom: 0;
   left: 0;
   color: #fff;
@@ -471,8 +466,15 @@ header {
   flex-direction: column;
   align-items: center;
   opacity: 1;
-  padding: 5%;
+  padding: 2%;
   text-align: center;
+}
+
+.project-logo {
+  height: 45px;
+  align-items: center;
+  object-fit: contain;
+  filter: brightness(0) invert(1);
 }
 
 .card-title {
@@ -486,6 +488,7 @@ header {
   width: 100%;
   opacity: 0;
   max-height: 0;
+  margin:5%;
   transition: max-height 0.5 ease transform 0.5 ease opacity 0.4s ease;
 }
 
@@ -495,14 +498,28 @@ header {
   opacity: 1;
 }
 
+.card-description {
+  margin: 2%;
+  margin-bottom: 10%;
+}
+
 .view-more-btn {
-  margin-top: 10px;
-  padding: 8px 16px;
+  padding: 10px 20px;
+  font-size: 1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 1px;
   background-color: #fff;
   color: #111;
+  border: none;
+  border-radius: 30px;
   text-decoration: none;
-  border-radius: 5px;
-  font-weight: bold;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.view-more-btn:hover {
+  background-color: #D90429;
+  color: #000;
 }
 
 .project-card:hover img {
