--- a/css/style.css
+++ b/css/style.css
@@ -529,27 +529,32 @@ header {
 .contact-section {
   height: 100vh;
   display: flex;
+  flex-direction: column;
+  background-color:#2B2D42;
   justify-content: center;
   align-items: center;
 }
 
 .contact-container {
   max-width: 600px;
-  width: 90%;
+  width: 100%;
+  margin-top: auto;
   text-align: center;
   color: #eee;
 }
 
 .section-title {
   font-size: 3.2rem;
-  margin-bottom: 0.5rem;
+  font-weight: 700;
+  margin-bottom: 2rem;
+
 }
 
 .section-subtitle {
   font-size: 1.2rem;
   margin-bottom: 2rem;
   max-width: 600px;
-  color: #555;
+
 }
 
 .contact-socials {
@@ -560,32 +565,50 @@ header {
   flex-wrap: wrap;
 }
 
-.social-link {
-  font-weight: 600;
-  color: #00f2ff;
-  font-size: 1.2rem;
+.contact-social-icon i{
+  font-size: 3rem;
+  filter: brightness(0) invert(1);
+  transform: scale(0.8);
+}
+
+.contact-social-icon:hover i{
+  transform: scale(1.2);
+  filter: brightness(1);
+  color: #D90429;
+}
+
+
+.contact-info p {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+  color: #eee;
+}
+
+.contact-email {
+  font-size: 1.3rem;
+  font-weight: 700;
+  color: #eee;
   text-decoration: none;
   transition: color 0.3s ease;
 }
 
-.social-link:hover {
-  color: #0077aa;
-  text-decoration: underline;
-}
-
-.contact-info p {
-  font-size: 1rem;
-  margin-bottom: 0.5rem;
-  color: #333;
-}
-
-.contact-email {
-  font-size: 1.2rem;
-  color: #00f2ff;
-  text-decoration: none;
-  font-weight: bold;
+.contact-email i {
+  margin-right: 10px;
 }
 
 .contact-email:hover {
+  color: #D90429;
   text-decoration: underline;
+}
+
+.disclaimer {
+  width: 100%;
+  background-color: #222;
+  color: #ccc;
+  font-size: 0.9rem;
+  padding: 1rem;
+  text-align: center;
+  border-top: 1px solid #444;
+  margin-top: auto;
+  font-style: italic;
 }
